Allow polling Vidarr during migration action
Only do the hard work once and then allow the migration action to keep polling
Vidarr.